{
  "version": 4,
  "terraform_version": "0.14.3",
  "serial": 357,
  "lineage": "6a97695c-6b77-5c51-e4b5-93ad756fdf07",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "dev-alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:666519825349:loadbalancer/app/dhobhighat-dev/02b0492a818e2bb1",
            "arn_suffix": "app/dhobhighat-dev/02b0492a818e2bb1",
            "dns_name": "dhobhighat-dev-1236471683.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-east-1:666519825349:loadbalancer/app/dhobhighat-dev/02b0492a818e2bb1",
            "idle_timeout": 600,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "dhobhighat-dev",
            "security_groups": [
              "sg-03a1036c5bfca8996"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09dc78ffbc6488038"
              },
              {
                "subnet_id": "subnet-0f7f8c8d00d91fbce"
              }
            ],
            "subnets": [
              "subnet-09dc78ffbc6488038",
              "subnet-0f7f8c8d00d91fbce"
            ],
            "vpc_id": "vpc-05c7cb5969bbd4cff",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.dev-alb-sg",
            "aws_subnet.dev-subnet-1",
            "aws_subnet.dev-subnet-2",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-alb-listener-port-dashboard-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:666519825349:listener/app/dhobhighat-dev/02b0492a818e2bb1/c0b15006c68bf7bc",
            "certificate_arn": "arn:aws:acm:us-east-1:666519825349:certificate/dc6bc47a-1120-4fa7-8502-a8585a4ffcc2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:666519825349:targetgroup/dashboard-service-target-group/56721feaa7c08baf",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:666519825349:listener/app/dhobhighat-dev/02b0492a818e2bb1/c0b15006c68bf7bc",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:666519825349:loadbalancer/app/dhobhighat-dev/02b0492a818e2bb1",
            "port": 8900,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ssl-cert-dhobighat-tk",
            "aws_alb.dev-alb",
            "aws_alb_target_group.dashboard-service-target-group",
            "aws_security_group.dev-alb-sg",
            "aws_subnet.dev-subnet-1",
            "aws_subnet.dev-subnet-2",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "dev-alb-listener-port-product-service",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:666519825349:listener/app/dhobhighat-dev/02b0492a818e2bb1/c8664bab338eea89",
            "certificate_arn": "arn:aws:acm:us-east-1:666519825349:certificate/dc6bc47a-1120-4fa7-8502-a8585a4ffcc2",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:666519825349:targetgroup/product-service-target-group/3ec8e441ee5c5aa9",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:666519825349:listener/app/dhobhighat-dev/02b0492a818e2bb1/c8664bab338eea89",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:666519825349:loadbalancer/app/dhobhighat-dev/02b0492a818e2bb1",
            "port": 8901,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_acm_certificate.ssl-cert-dhobighat-tk",
            "aws_alb.dev-alb",
            "aws_alb_target_group.product-service-target-group",
            "aws_security_group.dev-alb-sg",
            "aws_subnet.dev-subnet-1",
            "aws_subnet.dev-subnet-2",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "dashboard-service-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:666519825349:targetgroup/dashboard-service-target-group/56721feaa7c08baf",
            "arn_suffix": "targetgroup/dashboard-service-target-group/56721feaa7c08baf",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:666519825349:targetgroup/dashboard-service-target-group/56721feaa7c08baf",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "dashboard-service-target-group",
            "port": 8900,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05c7cb5969bbd4cff"
          },
          "dependencies": [
            "aws_alb.dev-alb",
            "aws_security_group.dev-alb-sg",
            "aws_subnet.dev-subnet-1",
            "aws_subnet.dev-subnet-2",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "product-service-target-group",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:666519825349:targetgroup/product-service-target-group/3ec8e441ee5c5aa9",
            "arn_suffix": "targetgroup/product-service-target-group/3ec8e441ee5c5aa9",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 300,
                "matcher": "200,301,302",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 60,
                "unhealthy_threshold": 10
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:666519825349:targetgroup/product-service-target-group/3ec8e441ee5c5aa9",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "product-service-target-group",
            "port": 8901,
            "protocol": "HTTP",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": true,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-05c7cb5969bbd4cff"
          },
          "dependencies": [
            "aws_alb.dev-alb",
            "aws_security_group.dev-alb-sg",
            "aws_subnet.dev-subnet-1",
            "aws_subnet.dev-subnet-2",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "dev-internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666519825349:internet-gateway/igw-024935f770b1accd2",
            "id": "igw-024935f770b1accd2",
            "owner_id": "666519825349",
            "tags": {
              "Name": "dev-internet-gateway"
            },
            "vpc_id": "vpc-05c7cb5969bbd4cff"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "dev-route-table",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-064bd57241f654445",
            "owner_id": "666519825349",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "0.0.0.0/0",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-024935f770b1accd2",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "dev-route-table"
            },
            "vpc_id": "vpc-05c7cb5969bbd4cff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.dev-internet-gateway",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-subnet-1-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-015e134008c287b1c",
            "route_table_id": "rtb-064bd57241f654445",
            "subnet_id": "subnet-09dc78ffbc6488038"
          },
          "dependencies": [
            "aws_internet_gateway.dev-internet-gateway",
            "aws_route_table.dev-route-table",
            "aws_subnet.dev-subnet-1",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "dev-subnet-2-association",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0cd462cff3d1674e7",
            "route_table_id": "rtb-064bd57241f654445",
            "subnet_id": "subnet-0f7f8c8d00d91fbce"
          },
          "dependencies": [
            "aws_internet_gateway.dev-internet-gateway",
            "aws_route_table.dev-route-table",
            "aws_subnet.dev-subnet-2",
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-alb-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666519825349:security-group/sg-03a1036c5bfca8996",
            "description": "Controls access to the application ELB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-03a1036c5bfca8996",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8900,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8900
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 8901,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 8901
              }
            ],
            "name": "dev-alb-sg",
            "name_prefix": "",
            "owner_id": "666519825349",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05c7cb5969bbd4cff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "dev-ec2-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666519825349:security-group/sg-00d79245801f9c339",
            "description": "Controls direct access to application instances (EC2)",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00d79245801f9c339",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Load Balancer Access",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH Access",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "dev-ec2-sg",
            "name_prefix": "",
            "owner_id": "666519825349",
            "revoke_rules_on_delete": false,
            "tags": {},
            "timeouts": null,
            "vpc_id": "vpc-05c7cb5969bbd4cff"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.dev-vpc"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666519825349:subnet/subnet-09dc78ffbc6488038",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az4",
            "cidr_block": "172.21.10.0/24",
            "id": "subnet-09dc78ffbc6488038",
            "map_public_ip_on_launch": true,
            "owner_id": "666519825349",
            "tags": {
              "Name": "dev-subnet-1"
            },
            "vpc_id": "vpc-05c7cb5969bbd4cff"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "dev-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666519825349:subnet/subnet-0f7f8c8d00d91fbce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.21.20.0/24",
            "id": "subnet-0f7f8c8d00d91fbce",
            "map_public_ip_on_launch": true,
            "owner_id": "666519825349",
            "tags": {
              "Name": "dev-subnet-2"
            },
            "vpc_id": "vpc-05c7cb5969bbd4cff"
          },
          "dependencies": [
            "aws_vpc.dev-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "dev-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:666519825349:vpc/vpc-05c7cb5969bbd4cff",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.21.0.0/16",
            "default_network_acl_id": "acl-06689e50696095f43",
            "default_route_table_id": "rtb-050e66d91f9ce0fd7",
            "default_security_group_id": "sg-053be70e3a39b714f",
            "dhcp_options_id": "dopt-5d50ce27",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-05c7cb5969bbd4cff",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-050e66d91f9ce0fd7",
            "owner_id": "666519825349",
            "tags": {
              "Name": "dev-vpc"
            }
          },
          "create_before_destroy": true
        }
      ]
    }
  ]
}